Fixed magic item generator style.

--- a/_tabs/generators.html
+++ b/_tabs/generators.html
@@ -5,10 +5,10 @@ order: 1
 ---
 
 <div class="card categories">
-    <div class="card-header d-flex justify-content-between hide-border-bottom">
+    <div class="card-header d-flex justify-content-between">
         <a href="magic-item-generator.html" class="ml-1 mr-2">Magic Item Generator</a>
     </div>
-    <div class="card-header d-flex justify-content-between hide-border-bottom">
+    <div class="card-header d-flex justify-content-between">
         <a href="../coming-soon.html" class="ml-1 mr-2">NPC Generator</a>
     </div>
     
