--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -5,15 +5,17 @@ title: Magic Item Generator
 
 <script src="../javascript/scripts.js"></script>
 
+<!-- Header -->
 <div>
     <p>This page randomly generates D&D 5e items with (mostly) weak and (hopefully) unique magical enchantments. I
       hope this
       helps when your players want to loot the body of random goblin #3.</p>
-    <p>A CSV file with the complete list of magic effects can be downloaded <a
-        href="../files/ILTB-Effects-20221020.csv" download>here</a>.</p>
+    <br>
     <p id="possible-items">There are 22,879 possible items.</p>
+    <br>
 </div>
 
+<!-- Category Selector -->
 <div class="w3-row w3-padding-16 centered-text">
     <label for="category">Item Category:</label>
     <select name="category" id="category" onchange="possibleItems()">
@@ -27,14 +29,23 @@ title: Magic Item Generator
     </select>
 </div>
 
+<!-- Button -->
 <div>
     <div>
-      <button type="button" onclick="getItem()">Loot the Body</button>
+      <button class="generator-button" type="button" onclick="getItem()">Loot the Body</button>
     </div>
 </div>
 
+<!-- Item Container -->
 <div id="item-container">
     <h2 id="itemName"></h2>
     <!-- <img class="item-divider" src="../images/simple-line-divider.svg"> -->
     <p id="itemDescription"></p>
+</div>
+
+<!-- Effects Download -->
+<div>
+    <br>
+    <p class="smaller-text">A CSV file with the complete list of magic effects can be downloaded <a
+        href="../files/ILTB-Effects-20221020.csv" download>here</a>.</p>
 </div>
