Finalized name generator and added link to generators page.

--- a/_tabs/generators.html
+++ b/_tabs/generators.html
@@ -9,7 +9,9 @@ order: 1
         <a href="magic-item-generator.html" class="ml-1 mr-2">Magic Item Generator</a>
     </div>
     <div class="card-header d-flex justify-content-between">
+        <a href="fantasy-name-generator.html" class="ml-1 mr-2">Fantasy Name Generator</a>
+    </div>
+    <div class="card-header d-flex justify-content-between">
         <a href="../coming-soon.html" class="ml-1 mr-2">NPC Generator (Coming Soon)</a>
     </div>
-    
 </div>
