--- a/generators/fantasy-name-generator.html
+++ b/generators/fantasy-name-generator.html
@@ -7,7 +7,8 @@ title: Fantasy Name Generator
 
 <!-- Header -->
 <div>
-    <p>I hope this helps the next time your players ask "What's the name of random villager number 4?"</p>
+    <p>This tool randomly generates millions of unique NPC names. I hope this helps the next time your players ask
+        "What's the name of random villager number 4?"</p>
     <br>
 </div>
 
@@ -15,23 +16,23 @@ title: Fantasy Name Generator
 <div class="w3-row w3-padding-16 centered-text">
     <label for="category">Number of names:</label>
     <select name="num_names" id="num_names">
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
     </select>
 </div>
 
 <!-- Button -->
 <div>
     <div>
-      <button class="generator-button" type="button" onclick="getName()">Generate Names</button>
+        <button class="generator-button" type="button" onclick="getName()">Generate Names</button>
     </div>
 </div>
 <br>
 <br>
 <!-- Name Container -->
 <div id="name-container">
-    <h2 id="names"></h2>
+
 </div>
