--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -11,7 +11,7 @@ title: Magic Item Generator
       hope this
       helps when your players want to loot the body of random goblin #3.</p>
     <br>
-    <p id="possible-items">There are 22,879 possible items.</p>
+    <p id="possible-items">There are 25,551 possible items.</p>
     <br>
 </div>
 
@@ -46,5 +46,5 @@ title: Magic Item Generator
 <div>
     <br>
     <p class="smaller-text">A CSV file with the complete list of magic effects can be downloaded <a
-        href="../files/ILTB-Effects-20221020.csv" download>here</a>.</p>
+        href="/ILTB-Effects-20221124.csv" download>here</a>.</p>
 </div>
