Changed generators post title on homepage to link directly to generators page instead of redirecting.

--- a/_posts/2022-11-05-Generators.html
+++ b/_posts/2022-11-05-Generators.html
@@ -2,6 +2,4 @@
 pin: true
 ---
 
-<meta http-equiv="Refresh" content="0; url='/generators/" />
-
-Click here to try our generators!
+Click <a href="/generators/magic-item-generator.html">here</a> to try our generators!
