--- a/_posts/2022-11-05-Generators.html
+++ b/_posts/2022-11-05-Generators.html
@@ -1,5 +1,9 @@
 ---
 pin: true
+author: njm
+date: 2022-11-05 10:05:00 -0500
+last_modified_at: 2022-11-29 11:40:00 -0500
+categories: [Website, General]
 ---
 
-Click <a href="/generators/magic-item-generator.html">here</a> to try our generators!
+Click <a href="/generators/">here</a> to try our generators!
