Updated MIG html to use checkbox form for categories. Began updating javascript to accommodate.

--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -10,13 +10,34 @@ title: Magic Item Generator
     <p>This page randomly generates D&D 5e items with (mostly) weak and (hopefully) unique magical enchantments. I
       hope this
       helps when your players want to loot the body of random goblin #3.</p>
-    <br>
-    <p id="possible-items">There are 25,551 possible items.</p>
-    <br>
+    <!-- <br> -->
+    <p id="possible-items">There are 25,551 possible items. Select or deselect the categories below to generate specific types of items.</p>
+    <!-- <br> -->
 </div>
 
-<!-- Category Selector -->
-<div class="w3-row w3-padding-16 centered-text">
+<!-- Category Selector Form -->
+<div>
+  <form onsubmit="return false;">
+    <fieldset>
+      <legend>Categories:</legend>
+      <input type="checkbox" id="armor" name="categories" value="armor" checked>
+      <label for="armor">Armor</label><br>
+      <input type="checkbox" id="clothing" name="categories" value="clothing" checked>
+      <label for="clothing">Clothing</label><br>
+      <input type="checkbox" id="equipment" name="categories" value="equipment" checked>
+      <label for="equipment">Equipment</label><br>
+      <input type="checkbox" id="instrument" name="categories" value="instrument" checked>
+      <label for="instrument">Instrument</label><br>
+      <input type="checkbox" id="vehicle" name="categories" value="vehicle" checked>
+      <label for="vehicle">Vehicle</label><br>
+      <input type="checkbox" id="weapon" name="categories" value="weapon" checked>
+      <label for="weapon">Weapon</label><br>
+      <input type="submit" value="Loot the Body" class="generator-button" onclick="getItems()">
+    </fieldset>
+  </form>
+</div>
+
+<!-- <div class="w3-row w3-padding-16 centered-text">
     <label for="category">Item Category:</label>
     <select name="category" id="category" onchange="possibleItems()">
       <option value="Any">Any</option>
@@ -27,14 +48,14 @@ title: Magic Item Generator
       <option value="Vehicle">Vehicle</option>
       <option value="Weapon">Weapon</option>
     </select>
-</div>
+</div> -->
 
 <!-- Button -->
-<div>
+<!-- <div>
     <div>
       <button class="generator-button" type="button" onclick="getItem()">Loot the Body</button>
     </div>
-</div>
+</div> -->
 
 <!-- Item Container -->
 <div id="item-container">
