Modified getItems function to pull the checked boxes from the html.

--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -18,7 +18,7 @@ title: Magic Item Generator
 <!-- Category Selector Form -->
 <div>
   <form onsubmit="return false;">
-    <fieldset>
+    <fieldset id="category-checkboxes">
       <legend>Categories:</legend>
       <input type="checkbox" id="armor" name="categories" value="armor" checked>
       <label for="armor">Armor</label><br>
