Finishing touches on getItems and MIG.

--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -7,16 +7,15 @@ title: Magic Item Generator
 
 <!-- Header -->
 <div>
-    <p>This page randomly generates D&D 5e items with (mostly) weak and (hopefully) unique magical enchantments. I
-      hope this
-      helps when your players want to loot the body of random goblin #3.</p>
-    <!-- <br> -->
-    <p id="possible-items">
-      There are 25,551 possible items. 
-      Select or deselect the categories below to generate specific types of items. 
-      The number in parentheses indicates how many possible items there are of that type.
-    </p>
-    <!-- <br> -->
+  <p>This page randomly generates D&D 5e items with (mostly) weak and (hopefully) unique magical enchantments. 
+    I hope this helps when your players want to loot the body of random goblin #3.</p>
+  <!-- <br> -->
+  <p id="possible-items">
+    There are 25,551 possible items.
+    Select or deselect the categories below to generate specific types of items.
+    The number in parentheses indicates how many possible items there are in each category.
+  </p>
+  <!-- <br> -->
 </div>
 
 <!-- Category Selector Form -->
@@ -41,35 +40,15 @@ title: Magic Item Generator
   </form>
 </div>
 
-<!-- <div class="w3-row w3-padding-16 centered-text">
-    <label for="category">Item Category:</label>
-    <select name="category" id="category" onchange="possibleItems()">
-      <option value="Any">Any</option>
-      <option value="Armor">Armor</option>
-      <option value="Clothing">Clothing</option>
-      <option value="Equipment">Equipment</option>
-      <option value="Instrument">Instrument</option>
-      <option value="Vehicle">Vehicle</option>
-      <option value="Weapon">Weapon</option>
-    </select>
-</div> -->
-
-<!-- Button -->
-<!-- <div>
-    <div>
-      <button class="generator-button" type="button" onclick="getItem()">Loot the Body</button>
-    </div>
-</div> -->
-
 <!-- Item Container -->
 <div id="item-container">
-    <h2 id="itemName"></h2>
-    <p id="itemDescription"></p>
+  <h2 id="itemName"></h2>
+  <p id="itemDescription"></p>
 </div>
 
 <!-- Effects Download -->
 <div>
-    <br>
-    <p class="smaller-text">A CSV file with the complete list of magic effects can be downloaded <a
-        href="/ILTB-Effects-20221124.csv" download>here</a>.</p>
+  <br>
+  <p class="smaller-text">A CSV file with the complete list of magic effects can be downloaded <a
+      href="/ILTB-Effects-20221124.csv" download>here</a>.</p>
 </div>
