Barbed weapons post. Added downloads folder.

--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -9,13 +9,11 @@ title: Magic Item Generator
 <div>
   <p>This page randomly generates D&D 5e items with (mostly) weak and (hopefully) unique magical enchantments. 
     I hope this helps when your players want to loot the body of random goblin #3.</p>
-  <!-- <br> -->
   <p id="possible-items">
     There are 25,551 possible items.
     Select or deselect the categories below to generate specific types of items.
     The number in parentheses indicates how many possible items there are in each category.
   </p>
-  <!-- <br> -->
 </div>
 
 <!-- Category Selector Form -->
@@ -50,5 +48,5 @@ title: Magic Item Generator
 <div>
   <br>
   <p class="smaller-text">A CSV file with the complete list of magic effects can be downloaded <a
-      href="/ILTB-Effects-20221124.csv" download>here</a>.</p>
+      href="/downloads/ILTB-Effects-20221124.csv" download>here</a>.</p>
 </div>
