Updated magic item generator with arcane focus category and reformatted the text on the page.

--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -7,12 +7,13 @@ title: Magic Item Generator
 
 <!-- Header -->
 <div>
-  <p>This page randomly generates D&D 5e items with (mostly) weak and (hopefully) unique magical enchantments. 
+  <p>This tool randomly generates D&D 5e items with (mostly) weak and (hopefully) unique magical enchantments. 
     I hope this helps when your players want to loot the body of random goblin #3.</p>
   <p id="possible-items">
-    There are 25,551 possible items.
-    Select or deselect the categories below to generate specific types of items.
-    The number in parentheses indicates how many possible items there are in each category.
+    The generator randomly selects from lists of items and magical effects for a total 
+    of 31,977 possible items. Select or deselect the categories below to generate specific 
+    types of items. A CSV file with the complete list of magic effects can be downloaded 
+    <a href="/downloads/ILTB-Effects-20221124.csv" download>here</a>.
   </p>
 </div>
 
@@ -21,18 +22,20 @@ title: Magic Item Generator
   <form onsubmit="return false;">
     <fieldset id="category-checkboxes">
       <legend>Categories:</legend>
+      <input type="checkbox" id="focus" name="categories" value="Focus" checked>
+      <label for="focus">Arcane Focus</label><br>
       <input type="checkbox" id="armor" name="categories" value="Armor" checked>
-      <label for="armor">Armor (2,295)</label><br>
+      <label for="armor">Armor</label><br>
       <input type="checkbox" id="clothing" name="categories" value="Clothing" checked>
-      <label for="clothing">Clothing (3,213)</label><br>
+      <label for="clothing">Clothing</label><br>
       <input type="checkbox" id="equipment" name="categories" value="Equipment" checked>
-      <label for="equipment">Equipment (10,557)</label><br>
+      <label for="equipment">Equipment</label><br>
       <input type="checkbox" id="instrument" name="categories" value="Instrument" checked>
-      <label for="instrument">Instrument (1,683)</label><br>
+      <label for="instrument">Instrument</label><br>
       <input type="checkbox" id="vehicle" name="categories" value="Vehicle" checked>
-      <label for="vehicle">Vehicle (765)</label><br>
+      <label for="vehicle">Vehicle</label><br>
       <input type="checkbox" id="weapon" name="categories" value="Weapon" checked>
-      <label for="weapon">Weapon (7,038)</label><br>
+      <label for="weapon">Weapon</label><br>
       <input type="submit" value="Loot the Body" class="generator-button" onclick="getItems()">
     </fieldset>
   </form>
@@ -42,11 +45,4 @@ title: Magic Item Generator
 <div id="item-container">
   <h2 id="itemName"></h2>
   <p id="itemDescription"></p>
-</div>
-
-<!-- Effects Download -->
-<div>
-  <br>
-  <p class="smaller-text">A CSV file with the complete list of magic effects can be downloaded <a
-      href="/downloads/ILTB-Effects-20221124.csv" download>here</a>.</p>
 </div>
