--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -11,7 +11,7 @@ title: Magic Item Generator
     I hope this helps when your players want to loot the body of random goblin #3.</p>
   <p id="possible-items">
     The generator randomly selects from lists of items and magical effects for a total
-    of 31,977 possible items. Select or deselect the categories below to generate specific
+    of 65,700 possible items. Select or deselect from the lists below to generate specific
     types of items. A CSV file with the complete list of magic effects can be downloaded
     <a href="/downloads/ILTB-Effects-20221124.csv" download>here</a>.
   </p>
