--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -22,7 +22,7 @@ title: Magic Item Generator
   <div class="col">
     <form onsubmit="return false;">
       <fieldset id="category-checkboxes">
-        <legend>Categories:</legend>
+        <legend><a href="/posts/magic-item-categories/" target="_blank" rel="noreferrer noopener">Categories</a>:</legend>
         <input type="checkbox" id="accessories" name="categories" value="accessory" checked>
         <label for="accessories">Accessories</label><br>
         <input type="checkbox" id="focus" name="categories" value="focus" checked>
@@ -46,7 +46,7 @@ title: Magic Item Generator
   <div class="col">
     <form>
       <fieldset id="power-level-checkboxes">
-        <legend>Power Level:</legend>
+        <legend><a href="/posts/magic-item-power-levels/" target="_blank" rel="noreferrer noopener">Power Level</a>:</legend>
         <input type="checkbox" id="mundane" name="power-level" value="mundane" checked>
         <label for="mundane">Mundane</label><br>
         <input type="checkbox" id="low" name="power-level" value="low" checked>
