Options post. Renamed categories and power posts. Added link to options post on MIG.

--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -22,7 +22,8 @@ title: Magic Item Generator
   <div class="col">
     <form onsubmit="return false;">
       <fieldset id="category-checkboxes">
-        <legend><a href="/posts/magic-item-categories/" target="_blank" rel="noreferrer noopener">Categories</a>:</legend>
+        <legend><a href="/posts/magic-item-generator-categories/" target="_blank"
+            rel="noreferrer noopener">Categories</a>:</legend>
         <input type="checkbox" id="accessories" name="categories" value="accessory" checked>
         <label for="accessories">Accessories</label><br>
         <input type="checkbox" id="focus" name="categories" value="focus" checked>
@@ -46,7 +47,8 @@ title: Magic Item Generator
   <div class="col">
     <form>
       <fieldset id="power-level-checkboxes">
-        <legend><a href="/posts/magic-item-power-levels/" target="_blank" rel="noreferrer noopener">Power Level</a>:</legend>
+        <legend><a href="/posts/magic-item-generator-power-levels/" target="_blank" rel="noreferrer noopener">Power
+            Level</a>:</legend>
         <input type="checkbox" id="mundane" name="power-level" value="mundane" checked>
         <label for="mundane">Mundane</label><br>
         <input type="checkbox" id="low" name="power-level" value="low" checked>
@@ -64,7 +66,8 @@ title: Magic Item Generator
   <div class="col">
     <form>
       <fieldset id="options-checkboxes">
-        <legend>Other Options:</legend>
+        <legend><a href="/posts/magic-item-generator-options/" target="_blank" rel="noreferrer noopener">Other
+            Options:</a></legend>
         <input type="checkbox" id="price" name="options" value="price" checked>
         <label for="price">Show Price</label><br>
         <input type="checkbox" id="add-curse" name="options" value="cursed" onchange="addCurseChecked(this);">
