Added tool set category and broke up weapon category.

--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -24,8 +24,8 @@ title: Magic Item Generator
       <fieldset id="category-checkboxes">
         <legend><a href="/posts/magic-item-generator-categories/" target="_blank"
             rel="noreferrer noopener">Categories</a>:</legend>
-        <input type="checkbox" id="accessories" name="categories" value="accessory" checked>
-        <label for="accessories">Accessories</label><br>
+        <input type="checkbox" id="accessory" name="categories" value="accessory" checked>
+        <label for="accessory">Accessory</label><br>
         <input type="checkbox" id="focus" name="categories" value="focus" checked>
         <label for="focus">Arcane Focus</label><br>
         <input type="checkbox" id="armor" name="categories" value="armor" checked>
@@ -36,10 +36,16 @@ title: Magic Item Generator
         <label for="equipment">Equipment</label><br>
         <input type="checkbox" id="instrument" name="categories" value="instrument" checked>
         <label for="instrument">Instrument</label><br>
+        <input type="checkbox" id="tool" name="categories" value="tool" checked>
+        <label for="tool">Tool Set</label><br>
         <input type="checkbox" id="vehicle" name="categories" value="vehicle" checked>
         <label for="vehicle">Vehicle</label><br>
-        <input type="checkbox" id="weapon" name="categories" value="weapon" checked>
-        <label for="weapon">Weapon</label><br>
+        <input type="checkbox" id="firearm" name="categories" value="firearm" checked>
+        <label for="firearm">Weapon (Firearm)</label><br>
+        <input type="checkbox" id="melee" name="categories" value="melee" checked>
+        <label for="melee">Weapon (Melee)</label><br>
+        <input type="checkbox" id="ranged" name="categories" value="ranged" checked>
+        <label for="ranged">Weapon (Ranged)</label><br>
       </fieldset>
     </form>
   </div>
