--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -111,3 +111,7 @@ title: Magic Item Generator
   <h2 id="itemName"></h2>
   <p id="itemDescription"></p>
 </div>
+
+<br>
+
+{% include ads-horizontal-long.html %}
