--- a/_tabs/generators.html
+++ b/_tabs/generators.html
@@ -12,6 +12,6 @@ order: 1
         <a href="fantasy-name-generator.html" class="ml-1 mr-2">Fantasy Name Generator</a>
     </div>
     <div class="card-header d-flex justify-content-between">
-        <a href="../coming-soon.html" class="ml-1 mr-2">NPC Generator (Coming Soon)</a>
+        <a href="npc-generator.html" class="ml-1 mr-2">NPC Generator (Beta)</a>
     </div>
 </div>
