--- a/generators/npc-generator.html
+++ b/generators/npc-generator.html
@@ -1,13 +1,26 @@
 ---
 layout: page
-title: NPC Generator
+title: Random NPC Generator
 ---
 
 <script src="../javascript/npcScripts.js"></script>
 
 <!-- Header -->
 <div>
-    <p>This generator randomly creates NPCs for your favorite TTRPGs.</p>
+    <p>
+        This generator randomly creates NPCs for your favorite TTRPGs. This tool is designed 
+        to provide short, useful NPC descriptions with minimal fluff. The NPCs can be used 
+        as-is for minor characters or as a base to build a more in-depth NPC upon. 
+        Whether you're looking for inspiration while planning your next session or need a quick 
+        NPC for a game you're currently running, I hope this generator helps. 
+    </p>
+    <p>
+        This tool is currently in a beta stage and is still being developed. Future features 
+        that I hope to implement include the ability to regenerate specific elements of the NPC 
+        description, a plot hook element for each NPC, and combat-related stats/abilities. I will 
+        also be implementing tools to select/deselect which elements you want to include as well 
+        as the ability to select specific races to be generated.
+    </p>
 </div>
 
 <!-- Button -->
@@ -39,32 +52,26 @@ title: NPC Generator
         </div>
         <div id="npc-voice-details">
             <p>
-                <b>Voice: </b>
+                <b>Voice & Speech: </b>
                 <span id="npc-voice-text">Stereotypical Italian accent</span>
             </p>
         </div>
         <div id="npc-personality-details">
             <p>
                 <b>Personality: </b>
-                <span id="npc-personality-text">Cheerful, determined, loyal to a fault</span>
+                <span id="npc-personality-text">Determined and loyal to a fault</span>
             </p>
         </div>
         <div id="npc-profession-details">
             <p>
                 <b>Profession: </b>
-                <span id="npc-profession-text">Plumber (Legendary)</span>
+                <span id="npc-profession-text">Mario is a legendary plumber.</span>
             </p>
         </div>
         <div id="npc-motivation-details">
             <p>
                 <b>Motivation: </b>
                 <span id="npc-motivation-text">Mario seeks to free Princess Peach from the castle.</span>
-            </p>
-        </div>
-        <div id="npc-background-details">
-            <p>
-                <b>Background: </b>
-                <span id="npc-background-text">Mario is just a simple plumber from the Mushroom Kingdom.</span>
             </p>
         </div>
     </div>
