Added gender selector to name generator.

--- a/_tabs/generators.html
+++ b/_tabs/generators.html
@@ -15,3 +15,5 @@ order: 1
         <a href="npc-generator.html" class="ml-1 mr-2">NPC Generator (Beta)</a>
     </div>
 </div>
+
+{% include ads-horizontal-long.html %}
