--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -3,7 +3,7 @@ layout: page
 title: Magic Item Generator
 ---
 
-<script src="../javascript/scripts.js"></script>
+<script src="../javascript/magicItemScripts.js"></script>
 
 <!-- Header -->
 <div>
@@ -20,7 +20,7 @@ title: Magic Item Generator
 <div class="flex-container">
   <!-- Category Selector Form -->
   <div class="col">
-    <form onsubmit="return false;">
+    <form>
       <fieldset id="category-checkboxes">
         <legend><a href="/posts/magic-item-generator-categories/" target="_blank"
             rel="noreferrer noopener">Item Categories</a>:</legend>
