--- a/generators/npc-generator.html
+++ b/generators/npc-generator.html
@@ -58,7 +58,7 @@ title: Random NPC Generator
         </div>
         <div id="npc-personality-details">
             <p>
-                <b>Personality: </b>
+                <b>Personality & Behavior: </b>
                 <span id="npc-personality-text">Determined and loyal to a fault</span>
             </p>
         </div>
