Formatted regenerate button for NPC generator.

--- a/generators/npc-generator.html
+++ b/generators/npc-generator.html
@@ -34,8 +34,12 @@ title: Random NPC Generator
 <div id="npc-container">
     <!-- Name -->
     <div id="npc-name-container">
-        <h2 id="npc-name-header">Mario</h2>
-        <p id="npc-race-details">Human, 41 years old</p>
+        <h2 id="npc-name-header" class="display-inline-block">Mario</h2>
+        <img src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate" class="regen-button" onclick="regenField('name')">
+    </div>
+    <div id="npc-race-container">
+        <p id="npc-race-details" class="display-inline-block">Human, 41 years old</p>
+        <img src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate" class="regen-button">
     </div>
     <div id="npc-details-container">
         <div id="npc-appearance-details">
